<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.halojantung.RegisterActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTER"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tulis nama Anda"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:id="@+id/umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/umur"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tulis umur Anda"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_badan"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tulis tinggi badan anda"
                android:textSize="20sp"
                android:id="@+id/tinggi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/berat_badan"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/berat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tulis berat badan anda"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Tulis Email Anda"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="314dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="25sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Tulis Password anda"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="314dp" />
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#757575"
            android:text="@string/Simpan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:radius="3dip"
            android:backgroundTint="#1565C0"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ViewSignin"
            android:textSize="20sp"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>
